Background Colors don't match in Workbench renderer #59373

Closed
opened 2018-12-14 17:19:38 +01:00 by green giant · 3 comments

System Information
Operating system: Windows 10
Graphics card: Gtx1070

Blender Version
Broken: 2.80 Beta Date: 2018-12-13 14:31

Short description of error
When using the Workbench Render Engine, the background color in the viewport, with shading is set to Rendered, doesn't match the background color when the scene is rendered.

Exact steps for others to reproduce the error
Change Render Engine to Workbench
Set Shading mode to Rendered
Go to World tab
Change Viewport Display Color to Red
Note that the viewport background color doesn't change
Render the scene
Note that the background color in the rendered image matches the selected color

**System Information** Operating system: Windows 10 Graphics card: Gtx1070 **Blender Version** Broken: 2.80 Beta Date: 2018-12-13 14:31 **Short description of error** When using the Workbench Render Engine, the background color in the viewport, with shading is set to Rendered, doesn't match the background color when the scene is rendered. **Exact steps for others to reproduce the error** Change Render Engine to Workbench Set Shading mode to Rendered Go to World tab Change Viewport Display Color to Red Note that the viewport background color doesn't change Render the scene Note that the background color in the rendered image matches the selected color
Author

Added subscriber: @greengiant83

Added subscriber: @greengiant83
Clément Foucault was assigned by Sebastian Parborg 2018-12-14 18:12:40 +01:00

This issue was referenced by bc74e48680

This issue was referenced by bc74e48680134ff195d6e76ac58b3c19e31b2803

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59373
No description provided.