Fix T59373: Background Colors don't match in Workbench renderer